--- a/apps/home_page/templates/home_page/base.html
+++ b/apps/home_page/templates/home_page/base.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{#{% url 'home_page:home-page' %}#}">Idea Cards</a>
+                <a class="navbar-brand" href="{% url 'home_page:home-page' %}">Idea Cards</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,23 +40,23 @@
                     <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
                         {% if not user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{#{% url 'users:login' %}#}">
+                                <a class="nav-link" aria-current="page" href="{% url 'users:login' %}">
                                     <span class="fas fa-sign-in-alt"></span>&nbsp;Login
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{#{% url 'users:register' %}#}">
+                                <a class="nav-link" aria-current="page" href="{% url 'users:register' %}">
                                     <span class="fas fa-user-plus"></span>&nbsp;Register
                                 </a>
                             </li>
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{#{% url 'users:profile' %}#}">
-                                    <span class="fas fa-user-edit"></span>&nbsp;Profile
+                                    <span class="fas fa-user-edit">{{ request.user|capfirst }}</span>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{#{% url 'users:logout' %}#}">
+                                <a class="nav-link" href="{% url 'users:logout' %}">
                                     <span class="fas fa-sign-out-alt"></span>&nbsp;Logout
                                 </a>
                             </li>
@@ -67,15 +67,15 @@
         </nav>
     </div>
 
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
 
     <div class="container mt-4">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="text-center alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}{% endblock content %}
     </div>
 
