--- a/apps/home_page/templates/home_page/base.html
+++ b/apps/home_page/templates/home_page/base.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{#{% url 'home_page:home-page' %}#}">
+                            <a class="nav-link" aria-current="page" href="{% url 'cards:card-list' %}">
                                 <span class="fas fa-home"></span>&nbsp;Cards
                             </a>
                         </li>
