Add CRUD functionality for Cards app

--- a/apps/cards/templates/cards/card_list.html
+++ b/apps/cards/templates/cards/card_list.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between py-3">
         <h2>Card List</h2>
         <div class="pt-2">
-            <a href="{#{% url 'cards:card-add' %}#}" class="btn btn-success">New Card</a>
+            <a href="{% url 'cards:card-add' %}" class="btn btn-success">New Card</a>
         </div>
     </div>
     <div class="row">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="card-footer text-center">
-                        <a href="{#{% url 'cards:card-detail' card.id %}#}" class="btn btn-success">
+                        <a href="{% url 'cards:card-detail' card.id %}" class="btn btn-outline-success btn-sm">
                             Read Card
                         </a>
                     </div>
