--- a/apps/home_page/templates/home_page/base.html
+++ b/apps/home_page/templates/home_page/base.html
@@ -11,6 +11,7 @@
 
     {% block style %}
         <link rel="stylesheet" type="text/css" href="{% static 'home_page/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'fontawesome_free/css/all.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'home_page/css/styles.css' %}">
     {% endblock style %}
     {% block extra_style %}{% endblock extra_style %}
@@ -34,7 +35,7 @@
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'cards:card-list' %}">
-                                <span></span>&nbsp;Cards
+                                <span class="fab fa-wizards-of-the-coast"></span>&nbsp;Cards
                             </a>
                         </li>
                     </ul>
@@ -53,7 +54,7 @@
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{#{% url 'users:profile' %}#}">
-                                    <span class="fas fa-user-edit">{{ request.user|capfirst }}</span>
+                                    <span class="fas fa-user"></span>{{ request.user|capfirst }}
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -82,6 +83,7 @@
 
     {% block script %}
         <script src="{% static 'home_page/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     {% endblock script %}
 
 </body>
