--- a/apps/cards/templates/cards/card_detail.html
+++ b/apps/cards/templates/cards/card_detail.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body row align-items-end">
                 <div class="d-flex justify-content-between text-muted">
-                    <a href="{#{% url 'cards:user-cards' card.author.username %}#}">
+                    <a href="{% url 'cards:user-cards' card.author.username %}">
                         {{ card.author|capfirst }}
                     </a>
                     <small>{{ card.pub_date|date:' F d, Y' }}</small>
