--- a/apps/home_page/templates/home_page/base.html
+++ b/apps/home_page/templates/home_page/base.html
@@ -54,7 +54,7 @@
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{#{% url 'users:profile' %}#}">
-                                    <span class="fas fa-user"></span>{{ request.user|capfirst }}
+                                    <span class="fas fa-user"></span>&nbsp;{{ request.user|capfirst }}
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -78,7 +78,28 @@
                 </div>
             {% endfor %}
         {% endif %}
+
         {% block content %}{% endblock content %}
+
+        <div class="text-center my-4">
+            {% if is_paginated %}
+                {% if page_obj.has_previous %}
+                    <a class="btn btn-outline-info" href="?page=1">&laquo;</a>
+                    <a class="btn btn-outline-info" href="?page={{ page_obj.previous_page_number }}">&larr;</a>
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                        <a class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <a class="btn btn-outline-info" href="?page={{ num }}">{{ num }}</a>
+                    {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <a class="btn btn-outline-info" href="?page={{ page_obj.next_page_number }}">&rarr;</a>
+                    <a class="btn btn-outline-info" href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a>
+                {% endif %}
+            {% endif %}
+        </div>
     </div>
 
     {% block script %}
