Fix card update, delete and url mistakes
1. Unlock url to User cards.
2. Fix mistake with saving admin like author after put changes to another user card.
3. Add opportunity to admin delete users cards.

--- a/apps/home_page/templates/home_page/base.html
+++ b/apps/home_page/templates/home_page/base.html
@@ -53,7 +53,7 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{#{% url 'users:profile' %}#}">
+                                <a class="nav-link" href="{% url 'cards:user-cards' request.user %}">
                                     <span class="fas fa-user"></span>&nbsp;{{ request.user|capfirst }}
                                 </a>
                             </li>
