--- a/apps/cards/templates/cards/card_detail.html
+++ b/apps/cards/templates/cards/card_detail.html
@@ -20,9 +20,11 @@
                     <div class="d-flex justify-content-start">
                         <p>Average rating: {% include 'cards/avg_ratings.html' %}</p>
                     </div>
-                    <div class="d-flex justify-content-start">
-                        <p>Your rating: {% include 'cards/add_ratings.html' %}</p>
-                    </div>
+                    {% if request.user.is_authenticated %}
+                        <div class="d-flex justify-content-start">
+                            <p>Your rating: {% include 'cards/add_ratings.html' %}</p>
+                        </div>
+                    {% endif %}
                 {% endif %}
             </div>
             <div class="card-footer text-center">
